--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,10 +1,177 @@
 $white: #fff;
+$border-color: rgb(255 255 255);
+$link-color: var(--gray-color);
+$link-hover: hsl(347.92deg 100% 69.8%);
+$div-color: hsl(347.92deg 100% 69.8%);
+$menu-color: var(--secondary-color);
 
 .app__navbar {
   width: 100%;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 1rem 2rem;
   background-color: rgba($white, 0.25);
   backdrop-filter: blur(4px);
+  border-color: rgba($color: $border-color, $alpha: 18%);
+  position: fixed;
+  z-index: 2;
+
+  & > * .active {
+    color: $link-hover;
+  }
+
+  & > * .active-dot {
+    background-color: $div-color;
+  }
+}
+
+.app__navbar-logo {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+
+  img {
+    width: 90px;
+    height: 20px;
+
+    @media screen and (max-width: 2000px) {
+      width: 180px;
+      height: 40px;
+    }
+  }
+}
+
+.app_navbar-menu {
+  position: relative;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: $menu-color;
+  display: grid;
+  place-content: center;
+
+  svg {
+    color: $white;
+    width: 20px;
+    height: 25px;
+  }
+
+  div {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    padding: 1rem;
+    width: 50%;
+    height: 100vh;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-direction: column;
+    z-index: 5;
+    background: url('../../assets/bgWhite.png');
+    background-color: $white;
+    background-size: cover;
+    background-repeat: repeat;
+    box-shadow: 0 0 20px rgb(168 168 168 / 18%);
+
+    @media screen and (max-width: 500px) {
+      width: 80%;
+    }
+
+    @media screen and (max-width: 400px) {
+      width: 100%;
+    }
+
+    svg {
+      height: 35px;
+      width: 35px;
+      color: $menu-color;
+      margin: 1rem;
+    }
+
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+      display: flex;
+      align-items: flex-start;
+      justify-content: flex-start;
+      flex-direction: column;
+
+      li {
+        margin: 1rem;
+
+        a {
+          text-decoration: none;
+          color: $link-color;
+          text-transform: uppercase;
+          font-size: 1.1rem;
+          font-weight: 500;
+
+          &:hover {
+            color: $link-hover;
+          }
+        }
+      }
+    }
+
+    @media screen and (min-width: 900px) {
+      display: none;
+    }
+  }
+
+  @media screen and (min-width: 900px) {
+    display: none;
+  }
+}
+
+.app__navbar-links {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  li {
+    cursor: pointer;
+    margin: 0 1rem;
+    flex-direction: column;
+
+    div {
+      width: 5px;
+      height: 5px;
+      border-radius: 50%;
+      background-color: transparent;
+      margin-bottom: 5px;
+    }
+
+    a {
+      text-decoration: none;
+      color: $link-color;
+      font-weight: 500;
+      text-transform: uppercase;
+      flex-direction: column;
+
+      @media screen and (max-width: 2000px) {
+        font-size: 1.1rem;
+      }
+
+      &:hover {
+        color: $link-hover;
+      }
+    }
+
+    &:hover {
+      div {
+        background-color: $div-color;
+      }
+    }
+  }
+
+  @media screen and (max-width: 900px) {
+    display: none;
+  }
 }
