all section added

--- a/src/App.scss
+++ b/src/App.scss
@@ -153,7 +153,9 @@
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    background-color: #cbcbcb;
+
+    // background-color: #cbcbcb;
+    background-color: #b7bdf8;
     margin: 0.5rem;
     transition: background-color 0.2s ease-in-out;
 
