--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+// @use './global.scss';
+// @use './container';
+// @use './components';
+
 .app {
   // background-color: var(--primary-color);
   font-family: var(--font-base);
