--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -8,13 +8,23 @@
   }
 }
 
+.form__style {
+  width: 100%;
+
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 .app__footer-cards {
   width: 60%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
-  margin: 4em 2rem 2rem;
+  margin: 4em auto 2rem;
 
   .app__footer-card {
     min-width: 290px;
